--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,13 @@ body {
 }
 
 .container {
-  background-color: rgba(255, 255, 255, 0.91);
+  padding: 0 25px;
 
+}
+.white-bg {
+  width: 82%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.91); 
 }
 
 h1 {
